--- a/contact-us.html
+++ b/contact-us.html
@@ -18,12 +18,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">Hotel Taj Way by Jyoti Villa</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://google.com">BLOG</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="book-room.html">BOOK ROOM</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contact-us.html">Contact Us</a></li>
@@ -37,7 +36,7 @@
                 <div class="block-heading">
                     <h2 class="text-info">Contact Us</h2>
                     <div class="col-lg-8 mx-auto">
-                        <p><span style="color: rgb(49, 106, 13);">Let's create unforgettable memories together. Ready to book your stay or need some guidance? Connect with us on social media for instant assistance with bookings, suggestions, or any questions.</span></p>
+                        <p>Unforgettable stay? <br>Connect with us on social media.</p>
                     </div>
                     <p></p>
                 </div>
@@ -54,7 +53,10 @@
                                     <div class="col-9 offset-lg-5"><span></span></div>
                                 </div><div class="row justify-content-center">
     <div class="col-12 col-md-8 text-center">
-        <span>+91 902745384</span><br>
+        <!-- Phone number with tel: protocol for dialing -->
+        <a href="tel:+91902745384">+91 9027453864</a><br>
+        
+        <!-- Email address with mailto: protocol for sending emails -->
         <a href="mailto:hoteltajwaybyjyotivilla@gmail.com">hoteltajwaybyjyotivilla@gmail.com</a>
     </div>
 </div>
