--- a/about-us.html
+++ b/about-us.html
@@ -18,12 +18,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">Hotel Taj Way by Jyoti Villa</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://google.com">BLOG</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link active" href="about-us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="book-room.html">BOOK ROOM</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
@@ -35,20 +34,11 @@
         <section class="clean-block">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">About Us</h2>
+                    <h2 class="text-center text-info">About Us</h2>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col">
                         <div class="row justify-content-center">
-                            <div class="col-sm-6 col-lg-4">
-                                <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/20240217_112708.jpg" width="294" height="308">
-                                    <div class="card-body info">
-                                        <h4 class="card-title">Ayush Kumar Saxena</h4>
-                                        <p class="card-text">Website Developer</p>
-                                        <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="col-sm-6 col-lg-4">
                                 <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/WhatsApp%20Image%202024-07-25%20at%207.55.06%20PM.jpeg" width="294" height="312">
                                     <div class="card-body info">
