--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Hero-Features-icons.css">
@@ -19,12 +20,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">Hotel Taj Way by Jyoti Villa</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://google.com">BLOG</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="book-room.html">BOOK ROOM</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
@@ -35,7 +35,7 @@
     <main class="page"><section class="clean-block clean-hero" style="background-image: url('assets/img/tech/image4.png.jpeg');color: rgba(9, 162, 255, 0.85);">
     <div class="text">
         <h2>Hotel Taj Way by Jyoti Villa</h2>
-        <p>Indulge in affordable luxury just a stone's throw from the Taj Mahal. Tucked beside Taj East Gate Metro Station, our boutique hotel invites you to savor comfort and convenience. With stylish rooms, complimentary WiFi, and attentive service, every moment promises an unforgettable escape. Immerse yourself in Agra's allure from our doorstep—it's time to elevate your stay with us.</p><button class="btn btn-outline-light btn-lg" type="button">Book ROOM</button>
+        <p>More than a hotel, it's a Taj Mahal escape.</p><button class="btn btn-outline-light btn-lg" type="button">Book ROOM</button>
     </div>
 </section>
         <section class="clean-block clean-info dark">
@@ -46,13 +46,13 @@
                             <div class="row mb-5">
                                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                                     <h2 id="GALLERY">Gallery</h2>
-                                    <p class="w-lg-50"><br>Where luxury meets convenience, just steps away from the timeless Taj Mahal. Book your stay today and experience Agra like never before!</p>
+                                    <p class="w-lg-50"><br>Taj Mahal nearby. Book now!</p>
                                 </div>
                             </div>
                             <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                                 <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%208.50.02%20PM.jpeg" width="341" height="224" style="height: 270;"></a></div>
                                 <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%208.50.06%20PM%20(1).jpeg" width="357" height="224" style="height: 270;"></a></div>
-                                <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%209.02.58%20PM%20(2).jpeg" width="221" height="228" style="height: 270;"></a></div>
+                                <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%209.02.58%20PM%20(2).jpeg" width="220" height="220" style="height: 270;"></a></div>
                                 <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%208.50.05%20PM%20(2).jpeg"></a></div>
                                 <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%208.50.07%20PM.jpeg" width="350" height="223"></a></div>
                                 <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/tech/WhatsApp%20Image%202024-07-17%20at%208.50.01%20PM.jpeg" width="419" height="255"></a></div>
@@ -158,8 +158,18 @@
             <div><a class="fixed-facebook" href="#" target="_blank"><i class="fa fa-facebook"></i><span>&nbsp;Facebook</span></a></div>
             <div><a class="fixed-instagram" href="#" target="_blank"><i class="fa fa-instagram"></i><span>&nbsp;Instagram</span></a></div>
             <div><a class="fixed-twitter" href="#" target="_blank"><i class="fa fa-twitter"></i><span>&nbsp;Twitter</span></a></div>
-            <div><a class="fixed-linkedin" href="#" target="_blank"><i class="fa fa-linkedin"></i><span>&nbsp;Linkedin</span></a></div>
-            <div><a class="fixed-youtube" href="#" target="_blank"><i class="fa fa-youtube-play"></i><span>&nbsp;Youtube</span></a></div>
+            <div><a class="fixed-linkedin" href="mailto:hoteltajwaybyjyotivilla@gmail.com" target="_blank">
+    <i class="icon ion-email" style="font-size: 15px;"></i>
+    <span> EMAIL</span>
+</a>
+</div>
+            <div><a class="fixed-youtube" target="_blank" href="tel:+919027453864">
+    <svg class="bi bi-telephone-fill" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="font-size: 16px;">
+        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
+    </svg>
+    <span>Phone</span>
+</a>
+</div>
         </div>
         <section class="clean-block slider dark">
             <div class="container">
@@ -219,26 +229,10 @@
         </section>
         <section class="clean-block">
             <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">About Us</h2>
+                <div class="block-heading"><span>&nbsp;&nbsp;</span><span>&nbsp;&nbsp;</span>
                     <div class="row justify-content-center">
                         <div class="col-sm-6 col-lg-4">
-                            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/20240217_112708.jpg" width="294" height="308">
-                                <div class="card-body info">
-                                    <h4 class="card-title">Ayush Kumar Saxena</h4>
-                                    <p class="card-text">Website Developer</p>
-                                    <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/WhatsApp%20Image%202024-07-25%20at%207.55.06%20PM.jpeg" width="294" height="312">
-                                <div class="card-body info">
-                                    <h4 class="card-title">Gaurav Kushwah</h4>
-                                    <p class="card-text">Hotel Manager</p>
-                                    <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                                </div>
-                            </div>
+                            <div class="card text-center clean-card"></div>
                         </div>
                     </div>
                 </div>
