--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main class="page"><section class="clean-block clean-hero" style="background-image: url('assets/img/tech/image4.png.jpeg');color: rgba(9, 162, 255, 0.85);">
     <div class="text">
         <h2>Hotel Taj Way by Jyoti Villa</h2>
-        <p>More than a hotel, it's a Taj Mahal escape.</p><button class="btn btn-outline-light btn-lg" type="button">Book ROOM</button>
+        <p>More than a hotel, it's a Taj Mahal escape.</p><button class="btn btn-outline-light btn-lg" type="button" onclick="window.location.href='book-room.html';">Book ROOM</button>
     </div>
 </section>
         <section class="clean-block clean-info dark">
